Notes and kind of implementation of CIndexed2dArray. This needs to be discussed or whatever what even this file is.
- sound_info.redicsv is the only this kind of file

--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -123,6 +123,7 @@
     </Compile>
     <Compile Include="Types\CCubeTexture.cs" />
     <Compile Include="Types\CGenericGrassMask.cs" />
+    <Compile Include="Types\CIndexed2dArray.cs" />
     <Compile Include="Types\CRagdoll.cs" />
     <Compile Include="Types\CSectorData.cs" />
     <Compile Include="Types\CSwarmCellMap.cs" />
