--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -23,6 +23,7 @@
   <package id="OpenGL.Net.WinForms" version="0.7.1" targetFramework="net461" />
   <package id="PropertyGridEx" version="1.0.0" targetFramework="net461" />
   <package id="protobuf-net" version="2.3.13" targetFramework="net461" />
+  <package id="RtfPipe" version="0.7.0.6" targetFramework="net461" />
   <package id="SharpZipLib" version="1.0.0-alpha2" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
