--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -122,12 +122,17 @@
       <DependentUpon>PtrEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Types\CCubeTexture.cs" />
+    <Compile Include="Types\CDecalSpawne.cs" />
     <Compile Include="Types\CGenericGrassMask.cs" />
     <Compile Include="Types\CIndexed2dArray.cs" />
+    <Compile Include="Types\CParticleSystem.cs" />
     <Compile Include="Types\CRagdoll.cs" />
     <Compile Include="Types\CSectorData.cs" />
     <Compile Include="Types\CSwarmCellMap.cs" />
     <Compile Include="Types\CSwfTexture.cs" />
+    <Compile Include="Types\EmitterDelaySettings.cs" />
+    <Compile Include="Types\EmitterDurationSettings.cs" />
+    <Compile Include="Types\SDynamicDecalMaterialInfo.cs" />
     <Compile Include="Types\SFoliageInstance.cs" />
     <Compile Include="HslColor.cs" />
     <Compile Include="IVariableEditor.cs" />
@@ -176,6 +181,8 @@
     <Compile Include="Types\IntegerTypes.cs" />
     <Compile Include="Types\MissingTypeException.cs" />
     <Compile Include="Types\SAppearanceAttachment.cs" />
+    <Compile Include="Types\SParticleEmitterLODLevel.cs" />
+    <Compile Include="Types\SSeedKeyValue.cs" />
     <Compile Include="W3ReaderExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
