Update nuget packages  - Fixes autoupdates not working.  - Refactor some cr2w stuff.

--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Types\CDecalSpawne.cs" />
     <Compile Include="Types\CGenericGrassMask.cs" />
     <Compile Include="Types\CIndexed2dArray.cs" />
+    <Compile Include="Types\CLayerInfo.cs" />
     <Compile Include="Types\CParticleSystem.cs" />
     <Compile Include="Types\CRagdoll.cs" />
     <Compile Include="Types\CSectorData.cs" />
@@ -132,6 +133,7 @@
     <Compile Include="Types\CSwfTexture.cs" />
     <Compile Include="Types\EmitterDelaySettings.cs" />
     <Compile Include="Types\EmitterDurationSettings.cs" />
+    <Compile Include="Types\SBoneIndiceMapping.cs" />
     <Compile Include="Types\SDynamicDecalMaterialInfo.cs" />
     <Compile Include="Types\SFoliageInstance.cs" />
     <Compile Include="HslColor.cs" />
