Implemented metadata.store reading properly
- The info needs to be actually used. The naming is pretty self explanatory but so far this is just a neat preview or whatever but it actually reads any game metadata.store now.

--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IWitcherArchive.cs" />
     <Compile Include="IWitcherArchiveType.cs" />
     <Compile Include="IWitcherFile.cs" />
+    <Compile Include="ObjectDumper.cs" />
     <Compile Include="WitcherTreeNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
