--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -320,6 +320,12 @@
     <Compile Include="Forms\frmLoading.Designer.cs">
       <DependentUpon>frmLoading.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmMergeMetadataStore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmMergeMetadataStore.Designer.cs">
+      <DependentUpon>frmMergeMetadataStore.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmStringsGuiImporterIDDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -636,6 +642,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmMenuCreator.resx">
       <DependentUpon>frmMenuCreator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmMergeMetadataStore.resx">
+      <DependentUpon>frmMergeMetadataStore.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmModExplorer.resx">
       <DependentUpon>frmModExplorer.cs</DependentUpon>
