--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="MouseKeyHook" version="5.6.0" targetFramework="net461" />
+  <package id="NAudio" version="1.10.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="ObjectListView.Official" version="2.9.2-alpha2" targetFramework="net461" />
@@ -70,6 +71,7 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="VGMToolbox" version="1.0.0.1040" targetFramework="net461" />
   <package id="VisualPlus" version="0.4.1.4-beta" targetFramework="net461" />
   <package id="Vlc.DotNet.Core" version="3.0.0-develop289" targetFramework="net461" />
   <package id="Vlc.DotNet.Core.Interops" version="3.0.0-develop289" targetFramework="net461" />
